corpus/at_text_mode.txt
=================
@ sign not letter
=================
foo\bar@wibble
----------------
(document
  (text_mode
    (text)
    (command (token))
    (text)))

=================
@ sign is letter
=================
\makeatletter foo\bar@wibble\makeatother
----------------
(document
  (text_mode
    (text_mode_at
      (makeatletter (makeatletter_token))
      (text)
      (command_at (token_at))
      (makeatother (makeatother_token)))))

==============================
@ sign is letter in text group
==============================
\makeatletter{foo\bar@wibble}\makeatother
----------------
(document
  (text_mode
    (text_mode_at
      (makeatletter (makeatletter_token))
      (text_group_at

        (text)
        (command_at (token_at))
       )
      (makeatother (makeatother_token)))))

==============================
@ sign is letter in optional text group
==============================
\makeatletter[foo\bar@wibble]\makeatother
----------------
(document
  (text_mode
    (text_mode_at
      (makeatletter (makeatletter_token))
      (opt_text_group_at
        (begin_opt)
        (text)
        (command_at (token_at))
        (end_opt))
      (makeatother (makeatother_token)))))
