corpus/inline_math.txt
=============
TeX inline math
=============
foo$bar$quux
-------------
(document
  (text_mode
    (text)
    (tex_inline_math
      (math_shift)
      (math_mode (text))
      (math_shift))
    (text)))

=============
LaTeX inline math
=============
foo\(bar\)quux
-------------
(document
  (text_mode
    (text)
    (latex_inline_math
      (begin_inline_math)
      (math_mode (text))
      (end_inline_math))
    (text)))

=============
math environment
=============
foo
\begin{math}
bar
\end{math}
quux
-------------
(document
  (text_mode
    (text)
    (inline_math_env
      (inline_math_begin (begin_token) (inline_math_env_group (inline_math_env_name)))
      (math_mode (text))
      (inline_math_end (end_token) (inline_math_env_group (inline_math_env_name))))
    (text)))
